# memetron3000

./: CLAUDE.md  Makefile  README.md  download.sh  pyproject.toml  requirements.txt  templates.json
.github/workflows/: python.yml
genmeme/: anthropic_wrapper.py  db.py  files.py  gen.py  llm.py  queue.py  server.py  thumbnails.py  video.py
genmeme/prompts/: gen.jinja  gen_en.jinja  select.jinja
scripts/: compress_video.py  get_winrate.py
static/: gallery.html  index.html
