[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memetron3000"
version = "0.1.0"
description = "Memetron3000"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.31.2",
    "aiofiles>=23.2.1",
    "types-aiofiles>=23.2.1",
    "aiohttp>=3.9.5",
    "jinja2>=3.1.5",
    "uvicorn>=0.22.0",
    "pydantic>=2.0",
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.15",
    "requests>=2.32.3",
    "types-requests>=2.32.0",
    "tqdm>=4.66.0",
    "types-tqdm>=4.66.0",
    "fire>=0.7.1",
    "moviepy==1.0.3",
    "sanic>=25.3.0",
    "sanic-ext>=24.12.0",
    "openai>=2.8.1",
    "pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "mypy==1.16.0",
    "flake8==7.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "isort>=6.1.0",
]

[tool.flake8]
exclude = ["*/__init__.py", ".venv"]
ignore = "E203,F403,E501,SIM115,PIE786,W503"
max-line-length = 120

[tool.setuptools]
py-modules = ["genmeme"]
